# seisCAE

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
configs/: clustering.yaml  default.yaml  detection.yaml  microseismic.yaml  tectonic.yaml  template_generator.py  training.yaml  volcanic.yaml
examples/notebooks/: 01_quickstart.ipynb  02_custom_models.ipynb  03_advanced_clustering.ipynb
examples/scripts/: custom_workflow.py  full_pipeline.py  multi_window_detection.py
seiscae/: __init__.py  pipeline.py
seiscae/cli/: __init__.py  cluster.py  detect.py  main.py  train.py
seiscae/clustering/: __init__.py  base.py  gmm.py  metrics_phase3.py
seiscae/config/: __init__.py  defaults.py  manager.py
seiscae/core/: __init__.py  catalog.py  detection.py  preprocessing.py
seiscae/io/: __init__.py  readers.py  writers.py
seiscae/models/: __init__.py  base.py  conv_autoencoder.py
seiscae/training/: __init__.py  callbacks.py  trainer.py
seiscae/utils/: __init__.py  device.py  logging.py  validators.py
seiscae/visualization/: __init__.py  clusters.py  diagnostics.py  latent_space.py  spectrograms.py  training_diagnostics.py  visualizer.py
tests/: __init__.py  test_clustering.py  test_detection.py  test_models.py  test_multi_window.py  test_pipeline.py
